# RayTracer

./: CMakeLists.txt  Readme.md  main.cpp
image/: Canvas.cpp  Canvas.h  Color.cpp  Color.h
math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Matrix4f.cpp  Matrix4f.h  Point.cpp  Point.h  Tuple.cpp  Tuple.h  Vector.cpp  Vector.h
tests/image/: CanvasTests.cpp  ColorTests.cpp
tests/math/: MathTests.cpp  Matrix4fTests.cpp  MatrixTests.cpp  PointTests.cpp  TupleTests.cpp  VectorTests.cpp
